--- a/Clash.ini
+++ b/Clash.ini
@@ -60,24 +60,24 @@ custom_proxy_group=4️⃣ 自定义`select`.*
 custom_proxy_group=5️⃣ 自定义`select`.*
 ;custom_proxy_group=🚀 节点选择`select`.*`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=加速`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-;custom_proxy_group=aycd`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=StockX&Goat`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=Footsites`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=FinishLine`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=Dicks`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=Nike`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=Hibbett`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=👽 AI`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他`select`.*
-custom_proxy_group=TikTok`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他`select`.*
+custom_proxy_group=加速`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+;custom_proxy_group=aycd`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=StockX&Goat`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=Footsites`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=FinishLine`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=Dicks`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=Nike`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=Hibbett`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=👽 AI`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他`select`.*
+custom_proxy_group=TikTok`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他`select`.*
 custom_proxy_group=📢 谷歌FCM`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=Ⓜ️ 微软服务`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 ;custom_proxy_group=📘 GitHub`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 ;custom_proxy_group=🙋 Telegram`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=📀 流媒体`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
-custom_proxy_group=🌍 国外`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=📀 流媒体`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=🌍 国外`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 ;custom_proxy_group=➡️ 国内`select`[]DIRECT`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🇨🇳 搬瓦工`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
