--- a/Clash.ini
+++ b/Clash.ini
@@ -1,7 +1,7 @@
 ;1域名组。。
 ;ruleset=aycd,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/aycd.list
 ruleset=StockX&Goat,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/StokcX-Alias.list
-ruleset=加速,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/ISPs.list
+ruleset=AdsPower,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/ISPs.list
 ruleset=Footsites,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Footsites.list
 ruleset=FinishLine,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/FNL.list
 ruleset=Dicks,https://raw.githubusercontent.com/callejoncho/Clash/refs/heads/main/Dicks.list
@@ -60,7 +60,7 @@ custom_proxy_group=4️⃣ 自定义`select`.*
 custom_proxy_group=5️⃣ 自定义`select`.*
 ;custom_proxy_group=🚀 节点选择`select`.*`[]DIRECT
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=加速`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
+custom_proxy_group=AdsPower`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 ;custom_proxy_group=aycd`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=StockX&Goat`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
 custom_proxy_group=Footsites`select`[]🚀 节点选择`[]DIRECT`[]🇨🇳 搬瓦工`[]📡 Home`[]📡 ISP`[]📡 GoodIP`[]📡 NiceIP`[]1️⃣ 自定义`[]2️⃣ 自定义`[]3️⃣ 自定义`[]4️⃣ 自定义`[]5️⃣ 自定义`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🏠 家宽`[]其他
